--- a/prepros-6.config
+++ b/prepros-6.config
@@ -31,6 +31,124 @@
         "styles/partials/_quickInfoBlog.scss",
         "styles/partials/_footer.scss"
       ]
+    },
+    {
+      "path": "Hover-master/scss/hover.scss",
+      "imports": [
+        "Hover-master/scss/_options.scss",
+        "Hover-master/scss/_mixins.scss",
+        "Hover-master/scss/_hacks.scss",
+        "Hover-master/scss/effects/2d-transitions/_grow.scss",
+        "Hover-master/scss/effects/2d-transitions/_shrink.scss",
+        "Hover-master/scss/effects/2d-transitions/_pulse.scss",
+        "Hover-master/scss/effects/2d-transitions/_pulse-grow.scss",
+        "Hover-master/scss/effects/2d-transitions/_pulse-shrink.scss",
+        "Hover-master/scss/effects/2d-transitions/_push.scss",
+        "Hover-master/scss/effects/2d-transitions/_pop.scss",
+        "Hover-master/scss/effects/2d-transitions/_bounce-in.scss",
+        "Hover-master/scss/effects/2d-transitions/_bounce-out.scss",
+        "Hover-master/scss/effects/2d-transitions/_rotate.scss",
+        "Hover-master/scss/effects/2d-transitions/_grow-rotate.scss",
+        "Hover-master/scss/effects/2d-transitions/_float.scss",
+        "Hover-master/scss/effects/2d-transitions/_sink.scss",
+        "Hover-master/scss/effects/2d-transitions/_bob.scss",
+        "Hover-master/scss/effects/2d-transitions/_hang.scss",
+        "Hover-master/scss/effects/2d-transitions/_skew.scss",
+        "Hover-master/scss/effects/2d-transitions/_skew-forward.scss",
+        "Hover-master/scss/effects/2d-transitions/_skew-backward.scss",
+        "Hover-master/scss/effects/2d-transitions/_wobble-vertical.scss",
+        "Hover-master/scss/effects/2d-transitions/_wobble-horizontal.scss",
+        "Hover-master/scss/effects/2d-transitions/_wobble-to-bottom-right.scss",
+        "Hover-master/scss/effects/2d-transitions/_wobble-to-top-right.scss",
+        "Hover-master/scss/effects/2d-transitions/_wobble-top.scss",
+        "Hover-master/scss/effects/2d-transitions/_wobble-bottom.scss",
+        "Hover-master/scss/effects/2d-transitions/_wobble-skew.scss",
+        "Hover-master/scss/effects/2d-transitions/_buzz.scss",
+        "Hover-master/scss/effects/2d-transitions/_buzz-out.scss",
+        "Hover-master/scss/effects/2d-transitions/_forward.scss",
+        "Hover-master/scss/effects/2d-transitions/_backward.scss",
+        "Hover-master/scss/effects/background-transitions/_fade.scss",
+        "Hover-master/scss/effects/background-transitions/_back-pulse.scss",
+        "Hover-master/scss/effects/background-transitions/_sweep-to-right.scss",
+        "Hover-master/scss/effects/background-transitions/_sweep-to-left.scss",
+        "Hover-master/scss/effects/background-transitions/_sweep-to-bottom.scss",
+        "Hover-master/scss/effects/background-transitions/_sweep-to-top.scss",
+        "Hover-master/scss/effects/background-transitions/_bounce-to-right.scss",
+        "Hover-master/scss/effects/background-transitions/_bounce-to-left.scss",
+        "Hover-master/scss/effects/background-transitions/_bounce-to-bottom.scss",
+        "Hover-master/scss/effects/background-transitions/_bounce-to-top.scss",
+        "Hover-master/scss/effects/background-transitions/_radial-out.scss",
+        "Hover-master/scss/effects/background-transitions/_radial-in.scss",
+        "Hover-master/scss/effects/background-transitions/_rectangle-in.scss",
+        "Hover-master/scss/effects/background-transitions/_rectangle-out.scss",
+        "Hover-master/scss/effects/background-transitions/_shutter-in-horizontal.scss",
+        "Hover-master/scss/effects/background-transitions/_shutter-out-horizontal.scss",
+        "Hover-master/scss/effects/background-transitions/_shutter-in-vertical.scss",
+        "Hover-master/scss/effects/background-transitions/_shutter-out-vertical.scss",
+        "Hover-master/scss/effects/border-transitions/_border-fade.scss",
+        "Hover-master/scss/effects/border-transitions/_hollow.scss",
+        "Hover-master/scss/effects/border-transitions/_trim.scss",
+        "Hover-master/scss/effects/border-transitions/_ripple-out.scss",
+        "Hover-master/scss/effects/border-transitions/_ripple-in.scss",
+        "Hover-master/scss/effects/border-transitions/_outline-out.scss",
+        "Hover-master/scss/effects/border-transitions/_outline-in.scss",
+        "Hover-master/scss/effects/border-transitions/_round-corners.scss",
+        "Hover-master/scss/effects/border-transitions/_underline-from-left.scss",
+        "Hover-master/scss/effects/border-transitions/_underline-from-center.scss",
+        "Hover-master/scss/effects/border-transitions/_underline-from-right.scss",
+        "Hover-master/scss/effects/border-transitions/_overline-from-left.scss",
+        "Hover-master/scss/effects/border-transitions/_overline-from-center.scss",
+        "Hover-master/scss/effects/border-transitions/_overline-from-right.scss",
+        "Hover-master/scss/effects/border-transitions/_reveal.scss",
+        "Hover-master/scss/effects/border-transitions/_underline-reveal.scss",
+        "Hover-master/scss/effects/border-transitions/_overline-reveal.scss",
+        "Hover-master/scss/effects/shadow-and-glow-transitions/_glow.scss",
+        "Hover-master/scss/effects/shadow-and-glow-transitions/_shadow.scss",
+        "Hover-master/scss/effects/shadow-and-glow-transitions/_grow-shadow.scss",
+        "Hover-master/scss/effects/shadow-and-glow-transitions/_box-shadow-outset.scss",
+        "Hover-master/scss/effects/shadow-and-glow-transitions/_box-shadow-inset.scss",
+        "Hover-master/scss/effects/shadow-and-glow-transitions/_float-shadow.scss",
+        "Hover-master/scss/effects/shadow-and-glow-transitions/_shadow-radial.scss",
+        "Hover-master/scss/effects/speech-bubbles/_bubble-top.scss",
+        "Hover-master/scss/effects/speech-bubbles/_bubble-right.scss",
+        "Hover-master/scss/effects/speech-bubbles/_bubble-bottom.scss",
+        "Hover-master/scss/effects/speech-bubbles/_bubble-left.scss",
+        "Hover-master/scss/effects/speech-bubbles/_bubble-float-top.scss",
+        "Hover-master/scss/effects/speech-bubbles/_bubble-float-right.scss",
+        "Hover-master/scss/effects/speech-bubbles/_bubble-float-bottom.scss",
+        "Hover-master/scss/effects/speech-bubbles/_bubble-float-left.scss",
+        "Hover-master/scss/effects/icons/_icon-back.scss",
+        "Hover-master/scss/effects/icons/_icon-forward.scss",
+        "Hover-master/scss/effects/icons/_icon-down.scss",
+        "Hover-master/scss/effects/icons/_icon-up.scss",
+        "Hover-master/scss/effects/icons/_icon-spin.scss",
+        "Hover-master/scss/effects/icons/_icon-drop.scss",
+        "Hover-master/scss/effects/icons/_icon-fade.scss",
+        "Hover-master/scss/effects/icons/_icon-float-away.scss",
+        "Hover-master/scss/effects/icons/_icon-sink-away.scss",
+        "Hover-master/scss/effects/icons/_icon-grow.scss",
+        "Hover-master/scss/effects/icons/_icon-shrink.scss",
+        "Hover-master/scss/effects/icons/_icon-pulse.scss",
+        "Hover-master/scss/effects/icons/_icon-pulse-grow.scss",
+        "Hover-master/scss/effects/icons/_icon-pulse-shrink.scss",
+        "Hover-master/scss/effects/icons/_icon-push.scss",
+        "Hover-master/scss/effects/icons/_icon-pop.scss",
+        "Hover-master/scss/effects/icons/_icon-bounce.scss",
+        "Hover-master/scss/effects/icons/_icon-rotate.scss",
+        "Hover-master/scss/effects/icons/_icon-grow-rotate.scss",
+        "Hover-master/scss/effects/icons/_icon-float.scss",
+        "Hover-master/scss/effects/icons/_icon-sink.scss",
+        "Hover-master/scss/effects/icons/_icon-bob.scss",
+        "Hover-master/scss/effects/icons/_icon-hang.scss",
+        "Hover-master/scss/effects/icons/_icon-wobble-horizontal.scss",
+        "Hover-master/scss/effects/icons/_icon-wobble-vertical.scss",
+        "Hover-master/scss/effects/icons/_icon-buzz.scss",
+        "Hover-master/scss/effects/icons/_icon-buzz-out.scss",
+        "Hover-master/scss/effects/curls/_curl-top-left.scss",
+        "Hover-master/scss/effects/curls/_curl-top-right.scss",
+        "Hover-master/scss/effects/curls/_curl-bottom-right.scss",
+        "Hover-master/scss/effects/curls/_curl-bottom-left.scss"
+      ]
     }
   ],
   "projectView": {
